src/pages/Home/Home.css
/* ... */
@media only screen and (max-width: 640px) {

  /* .HomePage-M-T-H {
    height: 60px;
    width: 40vw;
  } */
  /* .HomePage-M-T-H {
    padding: 0 calc(3vw);
    height: 70px;
  } */
  .resumee {
    width: 100% !important;
  }

  .social {
    justify-content: center;
    gap: 18px;
    margin-left: 0;
    background: #00000078;
    border-radius: 100px;
    padding: 5px;
  }

  .resumee .social,
  .contact-1 .social {
    width: 43vw !important;
  }

  .HomeConsole {
    bottom: max(14px, env(safe-area-inset-bottom));
    height: 48px;
    min-height: 48px;
    max-width: calc(100vw - 24px);
    padding: 0 14px;
  }

  .HomeConsole > div {
    justify-content: space-around !important;
    gap: 0;
    height: 100% !important;
    min-height: 48px;
    align-items: center !important;
  }

  .resumee {
    flex: 0 1 auto;
    width: auto !important;
  }

  .contact-1 {
    display: flex;
    flex: 0 0 auto;
  }

  .resumee .social button:first-child,
  .contact-1 .bookCallBtn {
    display: none !important;
  }

  .contact-1 .social {
    width: auto;
  }

  .social button,
  .social a {
    font-size: 9px;
    letter-spacing: 0.08em;
    white-space: nowrap;
  }

  .social button svg {
    display: none !important;
    width: 18px;
    height: 18px;
  }

  .HomePage-M-T-R {
    margin-right: 10px;
  }

  .MainHeader {
    position: relative;
    border-radius: 100px;
    margin-left: 10px;
  }

  .fav {
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .pro {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0;
  }

  .pro p:nth-child(1) {
    margin-bottom: 0;
  }

  .HomePage-M-3 p {
    font-size: 13px;
    line-height: 25px;
    text-align: center;
    margin: 0 -10px;
    width: 100%;
  }

  .HomePage-M-T-B {
    margin-top: 0px;
    display: flex !important;
    align-items: center;
    padding: 3px 12px 5px;
    border-radius: 20px;
  }

  .welcome span {
    font-size: min(80px, 18vw);
    line-height: 1.2;
  }

  .b-hr {
    display: flex;
    height: 30px;
    transform: translateY(3px);
    opacity: 0.9;
  }

  .HomePage-M {
    width: calc(100vw - 60px);
    height: calc(100vh - 60px);
    margin: 0;
    margin-bottom: 70px;
  }

  .HomePage-M b {
    font-size: min(40px, 9vw);
    line-height: 1.2;
    margin-top: -85px;
    margin-bottom: 6.5vh;
    background: linear-gradient(to right, #faf5f3a2 0%, #ff7a37e0 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }

  .HomeConsole {
    /* bottom: 10px; */
  }

  .b-hr {
    display: none;
  }

  .welcome p {
    font-size: 60px;
    line-height: 60px;
  }

  .icon-wrapper {
    background-color: #ffffff09;
  }

  .animated-option-wrapper:nth-of-type(n + 2) {
    background-color: #000000d8;
  }

  .b-hr {
    height: 15px;
    width: 300px;
    border-radius: 100px;
    margin-top: -8px;
    margin-left: 12px;
  }

  .animated-option-wrapper:nth-of-type(n + 2) {
    width: 90vw;
    margin-bottom: 5px;
  }

  .FooterOptions {
    bottom: 70px;
  }
}

@media only screen and (max-height: 520px) {
  .HomePage-M-R {
    display: none;
  }

  .HomePage-M {
    width: 100vw;
  }

  .MainHeader {
    top: 10px;
  }
}

@media only screen and (max-height: 390px) {
  .HomePage-M b {
    display: none;
  }
}

@media only screen and (max-height: 550px) and (max-width: 1120px) {
  .HomePage-M b {
    display: none;
  }

  .fav {
    flex-direction: row;
  }
}

